--- a/admin/login.html
+++ b/admin/login.html
@@ -38,6 +38,77 @@
     </div>
   </div>
 
+
+  <!-- 使用bootstrap引入模态框 -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+              aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">温馨提示!</h4>
+        </div>
+        <div class="modal-body">
+          <!-- 模态框提示内容不固定 -->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success" data-dismiss="modal">确定</button>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    //登录需求
+    $(function () {
+      //1.设置登录事件
+      $('.input_sub').on('click', function (e) {
+        e.preventDefault()
+        //2.获取账号和密码
+        var username = $('.input_txt').val().trim();
+        var password = $('.input_pass').val().trim();
+        //3.非空判断
+        if (username == '' || password == '') {
+          //alert('账号和密码不能为空');
+          $('#myModal .modal-body').text('账号和密码不能为空')
+          $('#myModal').modal()
+          return;
+
+        }
+        //4.发送ajax请求
+        $.ajax({
+          type: 'post',
+          url: 'http://localhost:8080/api/v1/admin/user/login',
+          data: {
+            username: username,
+            password: password
+          },
+          success: function (backData) {
+            //console.log(backData)
+            $('#myModal .modal-body').text(backData.msg)
+            $('#myModal').modal()
+            
+            if (backData.code == 200) {
+              //hidden.bs.modal	此事件在模态框被隐藏（并且同时在 CSS 过渡效果完成）之后被触发。
+              $('#myModal').on('hidden.bs.modal', function (e) {
+                window.location.href = './index.html'
+              })
+
+            }
+
+          }
+        })
+
+      })
+
+    })
+
+
+  </script>
+
+
+
 </body>
 
 </html>
