--- a/admin/index.html
+++ b/admin/index.html
@@ -20,7 +20,7 @@
         <a href="#" class="logo"><img src="images/logo02.png" alt="logo"></a>
         <div class="user_info">
             <img src="images/2.jpg" alt="person">
-            <span>欢迎&nbsp;&nbsp;李思思</span>
+            <span>欢迎&nbsp;&nbsp;<i style="font-style: normal">李思思</i></span>
             <b>管理员</b>
         </div>
         <!-- 左侧导航栏 -->
@@ -54,5 +54,63 @@
 
         </div>
     </div>
+    <!-- <script src="./libs/http.js"></script> -->
+
+    <script>
+        $(function () {
+            //一.发送ajax请求,获取网站管理员用户的个人信息
+            $.ajax({
+                type: 'get',
+                url: 'http://localhost:8080/api/v1/admin/user/info',
+                // url: BigNew.user_info,
+                //设置请求头,把token令牌带过去(为了所有页面都能使用将这段加在jquery引用文件中)
+                // headers: {
+                //     Authorization: window.localStorage.getItem('token')
+                // },
+                success: function (backData) {
+                    // console.log(backData)
+                    if (backData.code == 200) {
+                        //登录成功,个人信息和图片获取
+                        $('.sider .user_info>img').attr('src', backData.data.userPic)
+                        $('.sider_user_info>span>i').text(backData.data.nickname)
+                        $('.user_center_link>img').attr('src', backData.data.userPic)
+
+                    }
+
+
+                }
+
+            })
+
+            // //原生js发送ajax请求访问个人信息,把token令牌带过来
+            // var xhr user= new XHLHttpRequest();
+            // xhr.open('get','http://localhost:8080/api/v1/admin//info');
+            // //设置一个请求头
+            // xhr.setRequestHeader('Authorization',window.localStorage.getItem('token'));
+            // xhr.onload = function(){
+
+            //     console.log(xhr.response)
+            // }
+            // xhr.send()
+
+            //二.退出
+            //1.给退出按钮设置一个点击事件
+            $('.logout').on('click',function(){
+               
+                //2.删除token,跳转到登录界面
+                window.localStorage.removeItem('token');
+                window.location.href = './login.html'
+
+
+            })
+
+        })
+
+
+
+    </script>
+
+
 </body>
+
 </html>
